--- a/frontend/.chainlit/config.toml
+++ b/frontend/.chainlit/config.toml
@@ -129,7 +129,7 @@ login_page_image_filter = "brightness-50 grayscale"
 login_page_image_dark_filter = "contrast-200"
 
 # Specify a custom meta URL (used for meta tags like og:url)
-custom_meta_url = "https://github.com/pessini/superpod"
+custom_meta_url = "https://github.com/pessini/superpod-blog"
 
 # Specify a custom meta image url.
 # custom_meta_image_url = "https://chainlit-cloud.s3.eu-west-3.amazonaws.com/logo/chainlit_banner.png"
@@ -145,14 +145,14 @@ logo_file_url = "/public/superpod-logo.svg"
 # Be careful: If this is a relative path, it should not start with a slash.
 # custom_build = "./public/build"
 
-github = "https://github.com/pessini/superpod/"
+github = "https://github.com/pessini/superpod-blog"
 
 # Specify optional one or more custom links in the header.
 [[UI.header_links]]
 name = "GitHub Repo"
 display_name = "superpod"
 icon_url = "https://github.com/fluidicon.png"
-url = "https://github.com/pessini/superpod/"
+url = "https://github.com/pessini/superpod-blog"
 target = "_blank"                             # Optional: "_self", "_parent", "_top".
 
 [meta]
